--- a/index.html
+++ b/index.html
@@ -1,35 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="extension" content="random">
   <link rel="stylesheet" href="style.css">
+  <script src="vars.js" type="text/javascript"></script>
 </head>
+
+
 <body id=all>
-
-
 
 <div id="textArea">
 <h1 id="firstText">Hello World</h1>
 <!-- <h1 id="secondText">Rage</h1> -->
 </div>
 
-
-
 <script type="text/javascript">
-//Creating Time Variables
-  var today = new Date();
-  var hour = today.getHours();
-  var min = today.getMinutes();
-  var totalTime = hour*100 + min;
-
-
-//Creating Color Variables
-  var opacity = totalTime/2360;
-
-  var overlayColor = "rgba(173, 138, 160, " + opacity + ")";
-  var baseColor = "rgba(232, 184, 138, 1)";
-
 
 //Setting background colors
   document.body.style.backgroundColor = baseColor;
@@ -52,13 +39,7 @@
     'niiiiice'
   ];
 
-
-
-
-
 </script>
-
-
 
 </body>
 </html>
