--- a/index.html
+++ b/index.html
@@ -5,41 +5,19 @@
   <meta charset="UTF-8">
   <meta name="extension" content="random">
   <link rel="stylesheet" href="style.css">
-  <script src="vars.js" type="text/javascript"></script>
 </head>
 
 
 <body id=all>
 
+<!-- HTML -->
 <div id="textArea">
 <h1 id="firstText">Hello World</h1>
 <!-- <h1 id="secondText">Rage</h1> -->
 </div>
 
-<script type="text/javascript">
-
-//Setting background colors
-  document.body.style.backgroundColor = baseColor;
-
-  var divBackground = document.querySelector("all");
-  textArea.style.backgroundColor = overlayColor;
-
-
-//Setting text colors
-  var firstTextBlock = document.querySelector("#firstText");
-  firstTextBlock.style.color = 'white';
-
-  var secondTextBlock = document.querySelector("#secondText");
-  secondTextBlock.style.color = 'white';
-
-//Building text array
-
-  var textArray = [
-    'Go get em',
-    'niiiiice'
-  ];
-
-</script>
+<!-- Call Javascript -->
+<script src="tabulous.js" type="text/javascript"></script>
 
 </body>
 </html>
