icons, first pass at options/v2

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body id=all>
+<body id="all">
 
 <!-- HTML -->
 <div id="textArea">
@@ -19,3 +19,10 @@
 
 </body>
 </html>
+
+
+<!-- TO DO
+make it fade during certain hours (vars)
+make an array of phrases it randomly choses from
+figure out how to input colors, times, and phrases from the extension framework (instead of code)
+-->
