framework for inputting options

--- a/options.html
+++ b/options.html
@@ -1,4 +1,27 @@
-<!DOCTYPE html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
 <html>
 <head><title>Options</title></head>
 <body>
@@ -75,5 +98,7 @@ or
 <div id="status"></div>
 <button id="save">Save</button>
 
+<script src="options.js"></script>
+
 </body>
-</html>
+</html> -->
