--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </div>
 
 <!-- Call Javascript -->
-<script src="tabulous.js" type="text/javascript"></script>
+<script src="index.js" type="text/javascript"></script>
 
 </body>
 </html>
