--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
 <!-- TO DO
-make it fade during certain hours (vars)
-make an array of phrases it randomly choses from
-figure out how to input colors, times, and phrases from the extension framework (instead of code)
+figure out how to use colors, times, and phrases from front-end submitted options
+better icon
+readme for repo
 -->
