--- a/options.html
+++ b/options.html
@@ -4,13 +4,25 @@
 <head><title>My Test Extension Options</title></head>
 <body>
 
-Favorite color:
-<select id="color">
+Base color:
+<select id="firstColor">
  <option value="red">red</option>
  <option value="green">green</option>
  <option value="blue">blue</option>
  <option value="yellow">yellow</option>
 </select>
+
+<br>
+
+Overlay color:
+<select id="secondColor">
+ <option value="rgba(192, 14, 12, 1)">red</option>
+ <option value="green">green</option>
+ <option value="blue">blue</option>
+ <option value="yellow">yellow</option>
+</select>
+
+<br>
 
 <label>
   <input type="checkbox" id="like">
