Working opacity vars

--- a/options.html
+++ b/options.html
@@ -4,22 +4,21 @@
 <head><title>My Test Extension Options</title></head>
 <body>
 
-Base color:
+start color:
 <select id="firstColor">
- <option value="red">red</option>
- <option value="green">green</option>
- <option value="blue">blue</option>
- <option value="yellow">yellow</option>
+ <option value="rgba(232, 184, 138, 1)">yellow (default)</option>
+ <option value="rgba(12, 164, 102, 1)">green</option>
+ <option value="rgba(73, 53, 185, 1)">blue</option>
+ <option value="rgba(204, 23, 75, 1)">red</option>
+ <option value="rgba(173, 138, 160, 1)">purple</option>
 </select>
 
 <br>
 
-Overlay color:
+end color:
 <select id="secondColor">
- <option value="rgba(192, 14, 12, 1)">red</option>
- <option value="green">green</option>
- <option value="blue">blue</option>
- <option value="yellow">yellow</option>
+ <option value="rgba(173, 138, 160, 1)">purple (default)</option>
+ <option value="rgba(232, 184, 138, 1)">yellow</option>
 </select>
 
 <br>
