--- a/options.html
+++ b/options.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head><title>My Test Extension Options</title></head>
@@ -12,100 +11,76 @@ start color:
  <option value="rgba(204, 23, 75, 1)">red</option>
  <option value="rgba(173, 138, 160, 1)">purple</option>
 </select>
-
 <br>
-
 end color:
 <select id="secondColor">
  <option value="rgba(173, 138, 160, 1)">purple (default)</option>
  <option value="rgba(232, 184, 138, 1)">yellow</option>
 </select>
-
 <br>
-
-<label>
-  <input type="checkbox" id="like">
-  I like colors.
-</label>
-
-<div id="status"></div>
-<button id="save">Save</button>
-
-<script src="options.js"></script>
-</body>
-</html>
-
-
-
-
-<!-- <!DOCTYPE html>
-<html>
-<head><title>Options</title></head>
-<body>
-
+<br>
 Time fades.
 <br>
 <br>
 start time
 <select id="startTime">
-  <option value="0">midnight</option>
-  <option value="100">1:00 am</option>
-  <option value="200">2:00 am</option>
-  <option value="300">3:00 am</option>
-  <option value="400">4:00 am</option>
-  <option value="500">5:00 am</option>
-  <option value="600">6:00 am</option>
-  <option value="700">7:00 am</option>
-  <option value="800">8:00 am</option>
-  <option value="900">9:00 am</option>
-  <option value="1000">10:00 am</option>
-  <option value="1100">11:00 am</option>
-  <option value="1200">noon</option>
-  <option value="1300">1:00 pm</option>
-  <option value="1400">2:00 pm</option>
-  <option value="1500">3:00 pm</option>
-  <option value="1600">4:00 pm</option>
-  <option value="1700">5:00 pm</option>
-  <option value="1800">6:00 pm</option>
-  <option value="1900">7:00 pm</option>
-  <option value="2000">8:00 pm</option>
-  <option value="2100">9:00 pm</option>
-  <option value="2200">10:00 pm</option>
-  <option value="2300">11:00 pm</option>
+  <option value="none">-</option>
+  <option value=0>midnight</option>
+  <option value=100>1:00 am</option>
+  <option value=200>2:00 am</option>
+  <option value=300>3:00 am</option>
+  <option value=400>4:00 am</option>
+  <option value=500>5:00 am</option>
+  <option value=600>6:00 am</option>
+  <option value=700>7:00 am</option>
+  <option value=800>8:00 am</option>
+  <option value=900>9:00 am</option>
+  <option value=1000>10:00 am</option>
+  <option value=1100>11:00 am</option>
+  <option value=1200>noon</option>
+  <option value=1300>1:00 pm</option>
+  <option value=1400>2:00 pm</option>
+  <option value=1500>3:00 pm</option>
+  <option value=1600>4:00 pm</option>
+  <option value=1700>5:00 pm</option>
+  <option value=1800>6:00 pm</option>
+  <option value=1900>7:00 pm</option>
+  <option value=2000>8:00 pm</option>
+  <option value=2100>9:00 pm</option>
+  <option value=2200>10:00 pm</option>
+  <option value=2300>11:00 pm</option>
 </select>
 <br>
 end time
 <select id="endTime">
-  <option value="0">midnight</option>
-  <option value="100">1:00 am</option>
-  <option value="200">2:00 am</option>
-  <option value="300">3:00 am</option>
-  <option value="400">4:00 am</option>
-  <option value="500">5:00 am</option>
-  <option value="600">6:00 am</option>
-  <option value="700">7:00 am</option>
-  <option value="800">8:00 am</option>
-  <option value="900">9:00 am</option>
-  <option value="1000">10:00 am</option>
-  <option value="1100">11:00 am</option>
-  <option value="1200">noon</option>
-  <option value="1300">1:00 pm</option>
-  <option value="1400">2:00 pm</option>
-  <option value="1500">3:00 pm</option>
-  <option value="1600">4:00 pm</option>
-  <option value="1700">5:00 pm</option>
-  <option value="1800">6:00 pm</option>
-  <option value="1900">7:00 pm</option>
-  <option value="2000">8:00 pm</option>
-  <option value="2100">9:00 pm</option>
-  <option value="2200">10:00 pm</option>
-  <option value="2300">11:00 pm</option>
+  <option value="none">-</option>
+  <option value=0>midnight</option>
+  <option value=100>1:00 am</option>
+  <option value=200>2:00 am</option>
+  <option value=300>3:00 am</option>
+  <option value=400>4:00 am</option>
+  <option value=500>5:00 am</option>
+  <option value=600>6:00 am</option>
+  <option value=700>7:00 am</option>
+  <option value=800>8:00 am</option>
+  <option value=900>9:00 am</option>
+  <option value=1000>10:00 am</option>
+  <option value=1100>11:00 am</option>
+  <option value=1200>noon</option>
+  <option value=1300>1:00 pm</option>
+  <option value=1400>2:00 pm</option>
+  <option value=1500>3:00 pm</option>
+  <option value=1600>4:00 pm</option>
+  <option value=1700>5:00 pm</option>
+  <option value=1800>6:00 pm</option>
+  <option value=1900>7:00 pm</option>
+  <option value=2000>8:00 pm</option>
+  <option value=2100>9:00 pm</option>
+  <option value=2200>10:00 pm</option>
+  <option value=2300>11:00 pm</option>
 </select>
 <br>
-<br>
 or
-<br>
-<br>
 <label>
   <input type="checkbox" id="allDay">
   all day
@@ -116,6 +91,5 @@ or
 <button id="save">Save</button>
 
 <script src="options.js"></script>
-
 </body>
-</html> -->
+</html>
