--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 </body>
 </html>
 
-
 <!-- TO DO
-figure out how to use colors, times, and phrases from front-end submitted options
 better icon
 readme for repo
+words input/viewing
+colors input/picker?
 -->
