--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="extension" content="random">
+  <link href="https://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
