--- a/options.html
+++ b/options.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>My Test Extension Options</title>
   <link rel="stylesheet" href="optionsStyle.css">
 </head>
+
+
 <body>
+
+<div id="page">
+
 <h4>Life in color.</h4>
+
 start color:
 <select id="firstColor">
  <option value="rgba(232, 184, 138, 1)">yellow (default)</option>
@@ -14,15 +21,25 @@ start color:
  <option value="rgba(204, 23, 75, 1)">red</option>
  <option value="rgba(173, 138, 160, 1)">purple</option>
 </select>
+
 <br>
+
 end color:
 <select id="secondColor">
  <option value="rgba(173, 138, 160, 1)">purple (default)</option>
  <option value="rgba(232, 184, 138, 1)">yellow</option>
 </select>
+
 <br>
-<br>
+
 <h4>Time fades.</h4>
+<label>
+  <input type="checkbox" id="allDay">
+  all day
+</label>
+<br><div class="spacing"></div>
+------ <i>or</i> ------
+<br><div class="spacing"></div>
 start time
 <select id="startTime">
   <option value="none">-</option>
@@ -80,13 +97,6 @@ end time
   <option value=2200>10:00 pm</option>
   <option value=2300>11:00 pm</option>
 </select>
-<br>
-or
-<label>
-  <input type="checkbox" id="allDay">
-  all day
-</label>
-<br>
 <h4>Words words words?</h4>
 <label>
   <input type="checkbox" id="words">
@@ -99,5 +109,6 @@ or
 <button id="save">Save</button>
 
 <script src="options.js"></script>
+</div>
 </body>
 </html>
