--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body id="all">
 
 <!-- HTML -->
 <div id="textArea">
+<div class="spacing">
 <h1 id="firstText">Hello World</h1>
+</div>
 </div>
 
 <!-- Call Javascript -->
 <script src="index.js" type="text/javascript"></script>
-
 </body>
 </html>
