--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="extension" content="random">
   <link href="https://fonts.googleapis.com/css?family=Raleway:100" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="indexStyle.css">
 </head>
 <body id="all">
 
