Add clock option

--- a/options.html
+++ b/options.html
@@ -93,6 +93,11 @@ end time
   yes please
 </label>
 <br>
+<label>
+  <input type="checkbox" id="time">
+  no, but do you have the time?
+</label>
+<br>
 <br>
 <br>
 <div id="status"></div>
